# Autoware

./: .gitmodules
docs/: conf.py  index.rst
docs/DevelopersGuide/: DesignArchitecture.rst  DevelopmentProcess.rst  PackagesAPI.rst  PackagesNodes.rst
docs/DevelopersGuide/DevelopmentProcess/: ContributionRules.md
docs/DevelopersGuide/PackagesAPI/: update.sh
docs/DevelopersGuide/PackagesAPI/Detection/: vision_darknet_detect.md
docs/UsersGuide/: Installation.rst  Videos.md
docs/UsersGuide/Installation/: Build.rst  DockerImage.rst  Setup.rst  SetupDNN.rst
docs/UsersGuide/Installation/DockerImage/: NVIDIA_DRIVE.rst
docs/UsersGuide/Tutorials/: HowToStart.rst  QuickStart.rst
docs/architecture/: ComponentDiagram.pu  ComponentDiagram2.pu
ros/src/.config/rviz/: default.rviz  open_planner.rviz
ros/src/infra/: CMakeLists.txt  package.xml
ros/src/infra/include/infra/: mqtt_bb.hpp
ros/src/infra/src/: mqtt_bb.cpp  mqtt_recv_bb.cpp  mqtt_send_bb.cpp
ros/src/msgs/autoware_config_msgs/: CMakeLists.txt
ros/src/msgs/autoware_config_msgs/msg/: ConfigFootprintFilter.msg  ConfigWaypointFollower.msg  ConfigWaypointReplanner.msg
ros/src/msgs/autoware_msgs/: CMakeLists.txt
ros/src/msgs/autoware_msgs/msg/: LaneArray.msg  WaypointState.msg
ros/src/msgs/autoware_msgs/msg/config/: ConfigDecisionMaker.msg  ConfigWaypointFollower.msg  ConfigWaypointReplanner.msg
ros/src/system/core/autoware_core/: CMakeLists.txt  README.md  package.xml
ros/src/system/core/autoware_core/config/: autoware_core.yaml
ros/src/system/core/autoware_core/include/autoware_core/: autoware_core.h  command_executer.h  node_launcher.h
ros/src/system/core/autoware_core/include/cpp-httplib/: README.md  httplib.h
ros/src/system/core/autoware_core/launch/: autoware_core.launch  rviz.launch
ros/src/system/core/autoware_core/samples/: launch_req_sample.json  launch_res_sample.json  launch_sample.json
ros/src/system/core/autoware_core/src/: autoware_core.cpp  autoware_core.h  autoware_core_main.cpp  autoware_core_node.cpp  command_executer.cpp  command_executer.h  launch_analuzer_test_main.cpp  launch_file_analyzer.cpp  launch_file_analyzer.h  node_info.h  node_launcher.cpp  node_launcher.h
(+21 files in other folders)
